@@ -1,3 +1,7 @@
+2007-02-28 Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+	* Implement replace all in selection.
+
 2007-02-19 Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
         * Format README in reStructuedText
